# qualx3

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  config.sh  install.sh
cmake/Modules/: SetFortranFlags.cmake
configured/: config.h.in
deploy/Windows/: controlscript.qs  expo_64_VS2017.iss  installscript.qs  licence.txt
deploy/linux/: qualx.appimage.desktop  qualx.desktop.in
deploy/macOS/: expo.icns  make_dmg.sh  prepare.sh
deploy/macOS/image/: expo.xcf
docs/: make_pdf.sh  mkdocs.yml
docs/docs/: database-installation.md  index.md  installation.md  references.md
docs/docs/data-reduction/: background.md  index.md  peak-search.md  smoothing.md
docs/docs/introduction/: examples.md  getting-started.md  index.md
docs/docs/search-match/: index.md  restraints.md  search-match.md
script/: Dockerfile.appimage  Dockerfile.deb  Dockerfile.run  Makefile  build_appimage.sh  build_deb.sh  build_windows.cmd  build_windowsd.cmd  editme.Makefile  entrypoint.sh  make_appimage_docker.sh  make_debian.sh  make_debian_docker.sh  make_tar_gz.sh
share/qualx/files/: AtomProperties.xen
src/: CMakeLists.txt  abinit_form.f90  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  abscorr.f90  appstate.cpp  appstate.h  arrayutil.f90  asymfunc.f90  atombasic.f90  atomsutil.F90  back_interop.f90  background.f90  backgroundcoefwidget.cpp  backgroundcoefwidget.h  backgroundcoefwidget.ui  backgrounddialog.cpp  backgrounddialog.h  backgrounddialog.ui  bond2014.f90  bondsutil.f90  bump.f90  bvalence.f90  calcpdp.f90  cardtype.cpp  cardtype.h  cellsearchwidget.cpp  cellsearchwidget.h  cellsearchwidget.ui  centroids.f90  cgeom.f90  chem_files.f90  cif_form.f90  cifdbpopulator.cpp  cifdbpopulator.h  cifreader.cpp  cifreader.h  colorbutton.cpp  colorbutton.h  (+231 more)
src/images/: addpeak.xpm  deletepoint.xpm  delpeak.xpm  qualx.icns  qualx.rc
